V0 feature verification des entrées dns à la main
